--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,19 +108,20 @@ jobs:
     needs: build-wheels
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
-
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Download all wheels
         uses: actions/download-artifact@v4
         with:
-          path: dist
 
       - name: Flatten directory structure
         run: |
           mkdir -p final_dist
-          find dist -name "*.whl" -exec cp {} final_dist/ \;
+          # 查找当前工作目录下的所有 .whl 文件，并将它们复制到 final_dist
+          find . -name "*.whl" -exec cp {} final_dist/ \;
           ls -la final_dist/
 
       - name: Create Release
