introduce new ui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,23 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# Print compiler information
+message(STATUS "C compiler: ${CMAKE_C_COMPILER}")
+message(STATUS "C++ compiler: ${CMAKE_CXX_COMPILER}")
+message(STATUS "C compiler ID: ${CMAKE_C_COMPILER_ID}")
+message(STATUS "C++ compiler ID: ${CMAKE_CXX_COMPILER_ID}")
+message(STATUS "C compiler version: ${CMAKE_C_COMPILER_VERSION}")
+message(STATUS "C++ compiler version: ${CMAKE_CXX_COMPILER_VERSION}")
+
+# For Emscripten specifically
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER MATCHES "em\\+\\+")
+    message(STATUS "Using Emscripten compiler")
+endif()
+
 # compiler-specific options for magic.cpp
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     add_compile_options(-Wall -pedantic -Wextra -Wpedantic)
     add_compile_options(-fconstexpr-steps=100000000)
-
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     add_compile_options(-Wall -pedantic -Wextra -Wpedantic)
     # GCC equivalent settings
@@ -21,22 +33,22 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
         -fconstexpr-depth=1000000
         -fconstexpr-ops-limit=100000000
     )
-
 elseif(MSVC)
     add_compile_options(/W4 /permissive-)
     add_compile_options(/constexpr:steps100000000)
 endif()
 
-
-
 # Option for building tests
-option(TEST "Build test executable" OFF)
+option(TEST "Build test executable" ON)
+option(PYMODULE "Build Python module" OFF)
+option(EMMODULE "Build Emscripten/WebAssembly module" OFF)
 
 # Find all source files in src/ and src/core/ directories
 file(GLOB_RECURSE ENGINE_SOURCES 
     "${CMAKE_CURRENT_SOURCE_DIR}/src/core/*.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/misc/*.cpp"
 )
+
 # Find all header files
 file(GLOB_RECURSE ENGINE_HEADERS 
     "${CMAKE_CURRENT_SOURCE_DIR}/src/core/*.h"
@@ -45,11 +57,12 @@ file(GLOB_RECURSE ENGINE_HEADERS
     "${CMAKE_CURRENT_SOURCE_DIR}/src/misc/*.inl"
 )
 
-
 # Create the core library target (without Python bindings)
 add_library(5dchess_engine_core OBJECT ${ENGINE_SOURCES})
+
 # Ensure header files show up in IDEs
 target_sources(5dchess_engine_core PRIVATE ${ENGINE_HEADERS})
+
 target_include_directories(5dchess_engine_core 
     PUBLIC 
         ${CMAKE_CURRENT_SOURCE_DIR}/src
@@ -66,23 +79,26 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
         message(STATUS ">>> Compiling test.cpp...")
         add_executable(test_exec "test.cpp")
         target_link_libraries(test_exec PRIVATE 5dchess_engine_core)
+        
         add_subdirectory(test)  # Add test directory
-
+        
         add_executable(cli "cli.cpp")
         target_link_libraries(cli PRIVATE 5dchess_engine_core)
+        
         add_custom_command(TARGET cli POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy_directory
-                ${CMAKE_SOURCE_DIR}/test/pgn
-                $<TARGET_FILE_DIR:cli>/pgn
+            ${CMAKE_SOURCE_DIR}/test/pgn
+            $<TARGET_FILE_DIR:cli>/pgn
         )
-
-    else()
+    endif()
+    
+    if(PYMODULE)
         message(STATUS ">>> Building python library...")
         # Add pybind11 for Python bindings
         add_subdirectory(extern/pybind11)
         
         # Create the Python module
-        pybind11_add_module(engine bind.cpp)
+        pybind11_add_module(engine pymodule.cpp)
         target_link_libraries(engine PRIVATE 5dchess_engine_core)
         
         # Fix Visual Studio output directories on Windows
@@ -95,9 +111,60 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
             )
         endif(WIN32)
     endif()
+    
+    if(EMMODULE)
+        message(STATUS ">>> Building Emscripten/WebAssembly module...")
+        
+        # Check if we're using Emscripten
+        if(NOT EMSCRIPTEN)
+            message(FATAL_ERROR "EMMODULE option requires compilation with Emscripten. Use: emcmake cmake ..")
+        endif()
+        
+        # Create the WebAssembly module
+        add_executable(engine_wasm emmodule.cpp)
+        target_link_libraries(engine_wasm PRIVATE 5dchess_engine_core)
+
+        set(EMSCRIPTEN_LINK_FLAGS 
+            "-lembind --bind -fexceptions \
+            -sWASM=1 \
+            -sALLOW_MEMORY_GROWTH=1 \
+            -sMODULARIZE=1 \
+            -sEXPORT_NAME=\"createModule\" \
+            -sEXPORTED_RUNTIME_METHODS=[\"ccall\",\"cwrap\"] \
+            -sENVIRONMENT=web,worker \
+            -sDISABLE_EXCEPTION_CATCHING=0"
+        )
+
+        #Release/Debug
+        if(CMAKE_BUILD_TYPE STREQUAL "Release")
+            set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -O3")
+        else()
+            set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -sASSERTIONS=1")
+        endif()
+
+        # add_custom_command(TARGET engine_wasm POST_BUILD
+        #     COMMAND ${CMAKE_COMMAND} -E copy_directory
+        #     ${CMAKE_SOURCE_DIR}/ui
+        #     $<TARGET_FILE_DIR:engine_wasm>
+        # )
+
+        # Copy .kl scripts to build directory (for testing)
+        file(GLOB UI_SRC "${CMAKE_SOURCE_DIR}/ui/*")
+
+        add_custom_target(copy_files ALL
+            COMMAND ${CMAKE_COMMAND} -E copy ${UI_SRC} "${CMAKE_BINARY_DIR}"
+            COMMENT "Copying ui/ to build directory"
+        )
+
+        set_target_properties(engine_wasm PROPERTIES
+            LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS}"
+            OUTPUT_NAME "engine"
+            SUFFIX ".js"
+        )
+    endif()
 else()
+    message(STATUS ">>> Building as a cpp library submodule...")
     # Being used as a submodule - create an interface target
     add_library(5dchess_engine INTERFACE)
     target_link_libraries(5dchess_engine INTERFACE 5dchess_engine_core)
 endif()
-
